Refactor command parser and add test class